# machinelearning

./: README.md
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
mobile/: App.tsx
personalExpenses/: pyproject.toml
public/: index.html
src/: App.tsx
